<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:background="@color/shadow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/profile" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/textViewDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/isi_deskripsi"
                android:textAlignment="center" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewAdditionalInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="40dp"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/cardViewDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textViewAspirations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hobby_isi"
                android:textAlignment="center"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/textViewHopes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/makes"
                android:textAlignment="center"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/textViewDream"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mikes"
                android:textAlignment="center"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/textViewDrm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interets"
                android:textAlignment="center"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/textViewcita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cita"
                android:textAlignment="center" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
